# mapi

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
example/: CMakeLists.txt
example/include/: api_calc.h  api_utils.h  mapi_config.h
example/src/: api_calc.c  api_utils.c  impl_calc.c  impl_utils.c  main.c
mapi/: CMakeLists.txt
mapi/include/: mapi.h  mapi_api_header.h  mapi_api_source.h
mapi/src/: mapi.c
tests/: CMakeLists.txt
tests/mocks/: mock_func_desc_callback.hpp  mock_impl_utils.hpp
tests/tests/: CMakeLists.txt  main.cpp  mock_impl_calc.hpp  test_example.cpp  test_mapi.cpp
